website-source/shared/css/brand.css
/*
##     ##    ###    ########   ######
##     ##   ## ##   ##     ## ##    ##
##     ##  ##   ##  ##     ## ##
##     ## ##     ## ########   ######
 ##   ##  ######### ##   ##         ##
  ## ##   ##     ## ##    ##  ##    ##
   ###    ##     ## ##     ##  ######
*/

:root {

    /* FONT SCALE */
    --font-size--2: clamp(0.7813rem, 0.6356rem + 0.7283vw, 1.2rem);
    --font-size--1: clamp(0.9375rem, 0.7418rem + 0.9783vw, 1.5rem);
    --font-size-0: clamp(1.125rem, 0.8641rem + 1.3043vw, 1.875rem);
    --font-size-1: clamp(1.35rem, 1.0043rem + 1.7283vw, 2.3438rem);
    --font-size-2: clamp(1.62rem, 1.1643rem + 2.2783vw, 2.93rem);
    --font-size-3: clamp(1.9438rem, 1.3461rem + 2.988vw, 3.6619rem);
    --font-size-4: clamp(2.3325rem, 1.5516rem + 3.9043vw, 4.5775rem);
    --font-size-5: clamp(2.7994rem, 1.7829rem + 5.0826vw, 7.7219rem);

    /* SPACE SCALE */
    --space-3xs: clamp(0.3125rem, 0.2473rem + 0.3261vw, 0.5rem);
    --space-2xs: clamp(0.5625rem, 0.4321rem + 0.6522vw, 0.9375rem);
    --space-xs: clamp(0.875rem, 0.6793rem + 0.9783vw, 1.4375rem);
    --space-s: clamp(1.125rem, 0.8641rem + 1.3043vw, 1.875rem);
    --space-m: clamp(1.6875rem, 1.2962rem + 1.9565vw, 2.8125rem);
    --space-l: clamp(2.25rem, 1.7283rem + 2.6087vw, 3.75rem);
    --space-xl: clamp(3.375rem, 2.5924rem + 3.913vw, 5.625rem);
    --space-2xl: clamp(4.5rem, 3.4565rem + 5.2174vw, 7.5rem);
    --space-3xl: clamp(6.75rem, 5.1848rem + 7.8261vw, 11.25rem);

    --rs-font-sans: Roboto,
        'Helvetica Neue',
        'Arial Nova',
        'Nimbus Sans',
        Arial,
        sans-serif;
    --rs-font-mono: ui-monospace,
        'Cascadia Code',
        'Source Code Pro',
        Menlo,
        Consolas,
        'DejaVu Sans Mono',
        monospace;

    --rs-colour-ec-light-blue: #2990ea;
    --rs-colour-ec-dark-blue: #003366;

    --rs-colour-page-bg: white;
    --rs-colour-logo-stroke: var(--rs-colour-ec-dark-blue);
    --rs-colour-logo-fill: #a6d1ff;

    --rs-colour-nav-link-bg: rgba(255, 255, 255, 0.4);
    --rs-colour-nav-link-active-bg: white;
    --rs-colour-nav-link-bg-hover: white;
    --rs-colour-nav-link-bg-hover: var(--rs-colour-ec-dark-blue);

    --rs-colour-link: var(--rs-colour-ec-light-blue);
    --rs-colour-link-visited: purple;

    --rs-colour-footer-bg: var(--rs-colour-ec-dark-blue);

    --rs-colour-pink-values: 330 100% 71%;
    --rs-colour-red-values: 0 100% 69%;
    --rs-colour-green-values: 145 100% 41%;
    --rs-colour-yellow-values: 51 100% 50%;
    --rs-colour-light-blue-values: 180 100% 46%;

    --rs-colour-pink: hsl(var(--rs-colour-pink-values));
    --rs-colour-red: hsl(var(--rs-colour-red-values));
    --rs-colour-yellow: hsl(var(--rs-colour-yellow-values));
    --rs-colour-green: hsl(var(--rs-colour-green-values));
    --rs-colour-light-blue: hsl(var(--rs-colour-light-blue-values));

    --rs-highlight-current-values: var(--rs-colour-pink-values);
    --rs-highlight-current: hsl(var(--rs-colour-pink-values) / 0.4);

    --rs-transition-short: all 0.25s ease-in-out;

    --rs-width-max-column: 70ch;
    --rs-width-max-header: 140ch;

    --rs-width-max-logo: 280px;
}

@media (prefers-color-scheme: dark) {
    :root {
        --rs-colour-ec-dark-blue: white;
        --rs-colour-page-bg: #1E3232;
        --rs-colour-ec-light-blue: #2c9bfb;
        --rs-colour-logo-stroke: #a6d1ff;
        --rs-colour-logo-fill: #a6d1ff;
        --rs-colour-link: var(--rs-colour-ec-light-blue);
        --rs-colour-link-visited: yellow;
        --rs-colour-nav-link-bg: rgba(0, 51, 102, 0.4);
        --rs-colour-nav-link-active-bg: #003366;
        --rs-colour-nav-link-bg-hover: #003366;
        --rs-colour-footer-bg: #092121;
        --rs-colour-nav-link-hover: #003366;
    }

    nav>ul.rs-nav-sub>li>a:hover {
        color: rgba(0, 51, 102, 1);
    }
}

/*
########     ###     ######  ########
##     ##   ## ##   ##    ## ##
##     ##  ##   ##  ##       ##
########  ##     ##  ######  ######
##     ## #########       ## ##
##     ## ##     ## ##    ## ##
########  ##     ##  ######  ########
*/

html,
body {
    margin: 0;
    padding: 0;
    scrollbar-width: auto;
    width: 100%;
    height: 100%;
}

body {
    /* font-family: Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif; */
    font-family: var(--rs-font-sans);
    font-weight: 300;
    font-size: var(--font-size-0);
    color: var(--rs-colour-ec-dark-blue);
    background-color: var(--rs-colour-page-bg);
}

*::selection {
    color: var(--rs-colour-yellow);
    background-color: var(--rs-colour-ec-dark-blue);
}

*:focus-visible {
    outline: 2px dashed var(--rs-colour-ec-dark-blue);
}


h1,
h2,
h3,
h4,
h5,
h6 {
    /* font-family: Rubik, var(--rs-font-sans); */
    font-weight: 100;
    text-wrap: balance;
}

h1 {
    font-size: var(--font-size-5);
    text-align: center;
    margin-block-start: var(--space-l);
    margin-block-end: var(--space-xl);

    &>em {
        --rs-skew-size: var(--space-2xs);
        position: relative;
        --rs-h1-gradient-start: 39%;
        --rs-h1-gradient-end: 75%;
        background-image: linear-gradient(to bottom,
                transparent var(--rs-h1-gradient-start),
                var(--rs-highlight-current) var(--rs-h1-gradient-start),
                var(--rs-highlight-current) var(--rs-h1-gradient-end),
                transparent var(--rs-h1-gradient-end),
                transparent 100%);
        padding-right: 0.25rem;
        font-style: normal;
    }
}

h2 {
    color: #2990ea;
}

a {
    color: var(--rs-colour-link)
}

a:visited {
    color: var(--rs-colour-link-visited)
}

h2 {
    font-size: var(--font-size-4);
}

h3 {
    font-size: var(--font-size-3);
}

h4 {
    font-size: var(--font-size-2);
}

a {
    text-underline-offset: 4px;
}

a[href^="#"] {
    text-decoration: underline dotted;
}
/* ... */

